[tool.poetry]
name = "pyaussiebb"
version = "0.1.3"
description = "Aussie Broadband API module"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yaleman/pyaussiebb"
repository = "https://github.com/yaleman/pyaussiebb"
documentation = "https://yaleman.github.io/pyaussiebb/"
keywords = ["api", "aussie", "broadband", "internet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "aussiebb" }]

[tool.poetry.urls]
Issues = "https://github.com/yaleman/pyaussiebb/issues/"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
aiohttp = "^3.8.5"
pydantic = ">=2.0,<3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
mypy = "^1.0"
black = "^23.1.0"
pytest = "^7.2.0"
types-requests = "^2.28.11"
mkdocstrings = "^0.23.0"
mkdocs-material = "^9.0.2"
mkdocs = "^1.4.2"
requests-testing = "^0.2.0"
pylint-pydantic = "^0.2.0"
pytest-asyncio = "^0.21.0"
pytest-aiohttp = "^1.0.4"
mkdocstrings-python = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.0.259,<0.0.292"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 200

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: Tests that require network access and a working backend server",
]

[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"
