[tool.poetry]
name = "pyaussiebb"
version = "0.1.5"
description = "Aussie Broadband API module"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yaleman/pyaussiebb"
repository = "https://github.com/yaleman/pyaussiebb"
documentation = "https://yaleman.github.io/pyaussiebb/"
keywords = ["api", "aussie", "broadband", "internet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "aussiebb" }]

[tool.poetry.urls]
Issues = "https://github.com/yaleman/pyaussiebb/issues/"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
aiohttp = "^3.8.5"
pydantic = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.1,<0.9.5"
mypy = "^1.14.1"
pytest = "^8.3.4"
types-requests = "^2.32.0.20241016"
mkdocstrings = ">=0.27,<0.29"
mkdocs-material = "^9.5.49"
mkdocs = "^1.6.1"
requests-testing = "^0.2.0"
pytest-asyncio = "^0.25.1"
pytest-aiohttp = "^1.0.5"
mkdocstrings-python = "^1.13.0"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 200

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: Tests that require network access and a working backend server",
]

[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"
