[project]
name = "pyaussiebb"
version = "0.1.6"
description = "Aussie Broadband API module"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["requests>=2.27.1", "aiohttp>=3.11.18", "pydantic>=2.11.4"]
readme = "README.md"
keywords = ["api", "aussie", "broadband", "internet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
issues = "https://github.com/yaleman/pyaussiebb/issues/"
homepage = "https://github.com/yaleman/pyaussiebb"
repository = "https://github.com/yaleman/pyaussiebb"
documentation = "https://yaleman.github.io/pyaussiebb/"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "mypy==1.18.2",
    "pytest>=8.3.5",
    "types-requests==2.32.4.20250913",
    "mkdocstrings>=0.27",
    "mkdocs-material==9.6.22",
    "mkdocs>=1.6.1",
    "requests-testing>=0.2.0",
    "pytest-asyncio>=0.26.0",
    "pytest-aiohttp>=1.1.0",
    "mkdocstrings-python>=1.16.10",
]


[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 200

[tool.pdm.build]
includes = ["aussiebb"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "network: Tests that require network access and a working backend server",
]

[tool.pylint.MASTER]
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"
